fix horizontal scrolling

--- a/themes/somrat/assets/css/style.css
+++ b/themes/somrat/assets/css/style.css
@@ -4,6 +4,8 @@
 
 html {
   height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 * {
